--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <a href="./index.html">WebStudio</a>
 
       <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+        <li><a href="#">Studio</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contacts</a></li>
       </ul>
     </nav>
 
@@ -33,11 +33,14 @@
     </address>
   </header>
   <main>
+    <!-- #region Hero -->
     <section>
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
     </section>
+    <!-- #endregion -->
 
+    <!-- #region Features -->
     <section>
       <h2 hidden>Our features</h2>
       <ul>
@@ -67,7 +70,9 @@
         </li>
       </ul>
     </section>
+    <!-- #endregion -->
 
+    <!-- #region Team -->
     <section>
       <h2>Our Team</h2>
       <ul>
@@ -93,6 +98,9 @@
         </li>
       </ul>
     </section>
+    <!-- #endregion -->
+
+    <!-- #region Portfolio -->
     <section>
       <h2>Our Portfolio</h2>
       <ul>
@@ -128,6 +136,7 @@
         </li>
       </ul>
     </section>
+    <!-- #endregion -->
   </main>
   <footer>
     <a href="./index.html">WebStudio</a>
