--- a/index.html
+++ b/index.html
@@ -15,55 +15,56 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a href="./index.html">WebStudio</a>
+  <header class="header">
+    <nav class="header-navigation">
+      <a class="header-navigation-logo navigation-logo" href="./index.html"><span
+          class="navigation-logo-accent">Web</span>Studio</a>
 
-      <ul>
-        <li><a href="#">Studio</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contacts</a></li>
+      <ul class="header-navigation-list navigation-list">
+        <li class="navigation-list-item"><a href="#">Studio</a></li>
+        <li class="navigation-list-item"><a href="#">Portfolio</a></li>
+        <li class="navigation-list-item"><a href="#">Contacts</a></li>
       </ul>
     </nav>
 
-    <address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <address class="header-contacts">
+      <ul class="header-contacts-list contacts-list">
+        <li class="contacts-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="contacts-list-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
-  <main>
+  <main class="main">
     <!-- #region Hero -->
-    <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+    <section class="hero">
+      <h1 class="hero-title">Effective Solutions for Your Business</h1>
+      <button class="hero-button" type="button">Order Service</button>
     </section>
     <!-- #endregion -->
 
-    <!-- #region Features -->
-    <section>
-      <h2 hidden>Our features</h2>
-      <ul>
-        <li>
+    <!-- #region Our features -->
+    <section class="our-features">
+      <h2 class="visually-hidden">Our features</h2>
+      <ul class="our-features-list features-list">
+        <li class="features-list-item">
           <h3>Strategy</h3>
           <p>
             Our goal is to identify the business problem to walk away with the perfect and creative solution.
           </p>
         </li>
-        <li>
+        <li class="features-list-item">
           <h3>Punctuality</h3>
           <p>
             Bring the key message to the brand's audience for the best price within the shortest possible time.
           </p>
         </li>
-        <li>
+        <li class="features-list-item">
           <h3>Diligence</h3>
           <p>
             Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
           </p>
         </li>
-        <li>
+        <li class="features-list-item">
           <h3>Technologies</h3>
           <p>
             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -73,76 +74,76 @@
     </section>
     <!-- #endregion -->
 
-    <!-- #region Team -->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
+    <!-- #region Our team -->
+    <section class="our-team">
+      <h2 class="our-team-title">Our Team</h2>
+      <ul class="our-team-list team-list">
+        <li class="team-list-item team-item">
           <img src="./images/mark.jpg" width="264" height="260" alt="Mark">
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
+          <h3 class="team-item-name">Mark Guerrero</h3>
+          <p class="team-item-position">Product Designer</p>
         </li>
-        <li>
+        <li class="team-list-item team-item">
           <img src="./images/tom.jpg" width="264" height="260" alt="Tom">
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
+          <h3 class="team-item-name">Tom Ford</h3>
+          <p class="team-item-position">Frontend Developer</p>
         </li>
-        <li>
+        <li class="team-list-item team-item">
           <img src="./images/camila.jpg" width="264" height="260" alt="Camila">
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+          <h3 class="team-item-name">Camila Garcia</h3>
+          <p class="team-item-position">Marketing</p>
         </li>
-        <li>
+        <li class="team-list-item team-item">
           <img src="./images/daniel.jpg" width="264" height="260" alt="Daniel">
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+          <h3 class="team-item-name">Daniel Wilson</h3>
+          <p class="team-item-position">UI Designer</p>
         </li>
       </ul>
     </section>
     <!-- #endregion -->
 
-    <!-- #region Portfolio -->
-    <section>
-      <h2>Our Portfolio</h2>
-      <ul>
-        <li>
-          <img src="./images/portfolio-banking.jpg" alt="Banking app">
-          <h3>Banking App</h3>
-          <p>App</p>
+    <!-- #region Our portfolio -->
+    <section class="our-portfolio">
+      <h2 class="our-portfolio-title">Our Portfolio</h2>
+      <ul class="our-portfolio-list portfolio-list">
+        <li class="portfolio-list-item portfolio-item">
+          <img src="./images/portfolio-banking.jpg" width="360" height="300" alt="Banking app">
+          <h3 class="portfolio-item-title">Banking App</h3>
+          <p class="portfolio-item-category">App</p>
         </li>
-        <li>
-          <img src="./images/portfolio-payment.jpg" alt="Cashless payment">
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+        <li class="portfolio-list-item">
+          <img src="./images/portfolio-payment.jpg" width="360" height="300" alt="Cashless payment">
+          <h3 class="portfolio-item-title">Cashless Payment</h3>
+          <p class="portfolio-item-category">Marketing</p>
         </li>
-        <li>
-          <img src="./images/portfolio-app.jpg" alt="Meditation app">
-          <h3>Meditation App</h3>
-          <p>App</p>
+        <li class="portfolio-list-item">
+          <img src="./images/portfolio-app.jpg" width="360" height="300" alt="Meditation app">
+          <h3 class="portfolio-item-title">Meditation App</h3>
+          <p class="portfolio-item-category">App</p>
         </li>
-        <li>
-          <img src="./images/portfolio-taxi.jpg" alt="Taxi service">
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+        <li class="portfolio-list-item">
+          <img src="./images/portfolio-taxi.jpg" width="360" height="300" alt="Taxi service">
+          <h3 class="portfolio-item-title">Taxi Service</h3>
+          <p class="portfolio-item-category">Marketing</p>
         </li>
-        <li>
-          <img src="./images/portfolio-illustrations.jpg" alt="Screen illustrations">
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+        <li class="portfolio-list-item">
+          <img src="./images/portfolio-illustrations.jpg" width="360" height="300" alt="Screen illustrations">
+          <h3 class="portfolio-item-title">Screen Illustrations</h3>
+          <p class="portfolio-item-category">Design</p>
         </li>
-        <li>
-          <img src="./images/portfolio-courses.jpg" alt="Online courses">
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+        <li class="portfolio-list-item">
+          <img src="./images/portfolio-courses.jpg" width="360" height="300" alt="Online courses">
+          <h3 class="portfolio-item-title">Online Courses</h3>
+          <p class="portfolio-item-category">Marketing</p>
         </li>
       </ul>
     </section>
     <!-- #endregion -->
   </main>
-  <footer>
-    <a href="./index.html">WebStudio</a>
+  <footer class="footer">
+    <a class="footer-logo" href="./index.html"><span class="footer-logo-accent">Web</span>Studio</a>
 
-    <p>
+    <p class="footer-description">
       Increase the flow of customers and sales for your business with digital marketing & growth solutions.
     </p>
   </footer>
