--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- #region Our features -->
     <section class="our-features">
-      <h2 class="visually-hidden">Our features</h2>
+      <h2 class="visually-hidden" hidden>Our features</h2>
       <ul class="our-features-list features-list">
         <li class="features-list-item">
           <h3>Strategy</h3>
