change styles for the logo and move common styles to single classlogo

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
   <header class="header">
     <nav class="header-navigation">
-      <a class="header-navigation-logo navigation-logo" href="./index.html"><span
-          class="navigation-logo-accent">Web</span>Studio</a>
+      <a class="header-navigation-logo logo" href="./index.html">Web<span
+          class="navigation-logo-accent logo-accent">Studio</span></a>
 
       <ul class="header-navigation-list navigation-list">
         <li class="navigation-list-item"><a href="#">Studio</a></li>
@@ -141,7 +141,7 @@
     <!-- #endregion -->
   </main>
   <footer class="footer">
-    <a class="footer-logo" href="./index.html"><span class="footer-logo-accent">Web</span>Studio</a>
+    <a class="footer-logo logo" href="./index.html">Web<span class="footer-logo-accent logo-accent">Studio</span></a>
 
     <p class="footer-description">
       Increase the flow of customers and sales for your business with digital marketing & growth solutions.
