add a class to the first link inside unordered list

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           class="navigation-logo-accent logo-accent">Studio</span></a>
 
       <ul class="header-navigation-list navigation-list">
-        <li class="navigation-list-item"><a class="" href="./index.html">Studio</a></li>
+        <li class="navigation-list-item list-item"><a class="list-item-home" href="./index.html">Studio</a></li>
         <li class="navigation-list-item"><a href="">Portfolio</a></li>
         <li class="navigation-list-item"><a href="">Contacts</a></li>
       </ul>
