--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           class="navigation-logo-accent logo-accent">Studio</span></a>
 
       <ul class="header-navigation-list navigation-list">
-        <li class="navigation-list-item list-item"><a class="list-item-home" href="./index.html">Studio</a></li>
-        <li class="navigation-list-item"><a href="">Portfolio</a></li>
-        <li class="navigation-list-item"><a href="">Contacts</a></li>
+        <li><a class="navigation-list-item" href="./index.html">Studio</a></li>
+        <li><a class="navigation-list-item" href="">Portfolio</a></li>
+        <li><a class="navigation-list-item" href="">Contacts</a></li>
       </ul>
     </nav>
 
