--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <li><a class="navigation-list-item" href="">Portfolio</a></li>
         <li><a class="navigation-list-item" href="">Contacts</a></li>
       </ul>
-    </nav>
 
-    <address class="header-contacts">
-      <ul class="header-contacts-list contacts-list">
-        <li class="contacts-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contacts-list-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
-    </address>
+      <address class="header-contacts">
+        <ul class="header-contacts-list contacts-list">
+          <li><a class="contacts-list-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contacts-list-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </nav>
   </header>
   <main class="main">
     <!-- #region Hero -->
