--- a/index.html
+++ b/index.html
@@ -45,28 +45,29 @@
     <!-- #region Our features -->
     <section class="our-features">
       <h2 class="visually-hidden" hidden>Our features</h2>
+
       <ul class="our-features-list features-list">
-        <li class="features-list-item">
-          <h3>Strategy</h3>
-          <p>
+        <li class="features-list-item features-item">
+          <h3 class="features-item-title">Strategy</h3>
+          <p class="features-item-description">
             Our goal is to identify the business problem to walk away with the perfect and creative solution.
           </p>
         </li>
-        <li class="features-list-item">
-          <h3>Punctuality</h3>
-          <p>
+        <li class="features-list-item features-item">
+          <h3 class="features-item-title">Punctuality</h3>
+          <p class="features-item-description">
             Bring the key message to the brand's audience for the best price within the shortest possible time.
           </p>
         </li>
-        <li class="features-list-item">
-          <h3>Diligence</h3>
-          <p>
+        <li class="features-list-item features-item">
+          <h3 class="features-item-title">Diligence</h3>
+          <p class="features-item-description">
             Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
           </p>
         </li>
-        <li class="features-list-item">
-          <h3>Technologies</h3>
-          <p>
+        <li class="features-list-item features-item">
+          <h3 class="features-item-title">Technologies</h3>
+          <p class="features-item-description">
             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
           </p>
         </li>
@@ -77,6 +78,7 @@
     <!-- #region Our team -->
     <section class="our-team">
       <h2 class="our-team-title">Our Team</h2>
+
       <ul class="our-team-list team-list">
         <li class="team-list-item team-item">
           <img src="./images/mark.jpg" width="264" height="260" alt="Mark">
@@ -105,6 +107,7 @@
     <!-- #region Our portfolio -->
     <section class="our-portfolio">
       <h2 class="our-portfolio-title">Our Portfolio</h2>
+
       <ul class="our-portfolio-list portfolio-list">
         <li class="portfolio-list-item portfolio-item">
           <img src="./images/portfolio-banking.jpg" width="360" height="300" alt="Banking app">
