--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="header">
     <nav class="header-navigation">
       <a class="header-navigation-logo logo" href="./index.html">Web<span
-          class="navigation-logo-accent logo-accent">Studio</span></a>
+          class="navigation-logo-accent logo-accent">studio</span></a>
 
       <ul class="header-navigation-list navigation-list">
         <li><a class="navigation-list-item" href="./index.html">Studio</a></li>
@@ -37,8 +37,8 @@
   <main class="main">
     <!-- #region Hero -->
     <section class="hero">
-      <h1 class="hero-title">Effective Solutions for Your Business</h1>
-      <button class="hero-button" type="button">Order Service</button>
+      <h1 class="hero-title">Effective solutions for your business</h1>
+      <button class="hero-button" type="button">Order service</button>
     </section>
     <!-- #endregion -->
 
@@ -77,18 +77,18 @@
 
     <!-- #region Our team -->
     <section class="our-team">
-      <h2 class="our-team-title">Our Team</h2>
+      <h2 class="our-team-title">Our team</h2>
 
       <ul class="our-team-list team-list">
         <li class="team-list-item team-item">
           <img src="./images/mark.jpg" width="264" height="260" alt="Mark">
           <h3 class="team-item-name">Mark Guerrero</h3>
-          <p class="team-item-position">Product Designer</p>
+          <p class="team-item-position">Product designer</p>
         </li>
         <li class="team-list-item team-item">
           <img src="./images/tom.jpg" width="264" height="260" alt="Tom">
           <h3 class="team-item-name">Tom Ford</h3>
-          <p class="team-item-position">Frontend Developer</p>
+          <p class="team-item-position">Frontend developer</p>
         </li>
         <li class="team-list-item team-item">
           <img src="./images/camila.jpg" width="264" height="260" alt="Camila">
@@ -98,7 +98,7 @@
         <li class="team-list-item team-item">
           <img src="./images/daniel.jpg" width="264" height="260" alt="Daniel">
           <h3 class="team-item-name">Daniel Wilson</h3>
-          <p class="team-item-position">UI Designer</p>
+          <p class="team-item-position">UI designer</p>
         </li>
       </ul>
     </section>
@@ -106,37 +106,37 @@
 
     <!-- #region Our portfolio -->
     <section class="our-portfolio">
-      <h2 class="our-portfolio-title">Our Portfolio</h2>
+      <h2 class="our-portfolio-title">Our portfolio</h2>
 
       <ul class="our-portfolio-list portfolio-list">
         <li class="portfolio-list-item portfolio-item">
           <img src="./images/portfolio-banking.jpg" width="360" height="300" alt="Banking app">
-          <h3 class="portfolio-item-title">Banking App</h3>
+          <h3 class="portfolio-item-title">Banking app</h3>
           <p class="portfolio-item-category">App</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-payment.jpg" width="360" height="300" alt="Cashless payment">
-          <h3 class="portfolio-item-title">Cashless Payment</h3>
+          <h3 class="portfolio-item-title">Cashless payment</h3>
           <p class="portfolio-item-category">Marketing</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-app.jpg" width="360" height="300" alt="Meditation app">
-          <h3 class="portfolio-item-title">Meditation App</h3>
+          <h3 class="portfolio-item-title">Meditation app</h3>
           <p class="portfolio-item-category">App</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-taxi.jpg" width="360" height="300" alt="Taxi service">
-          <h3 class="portfolio-item-title">Taxi Service</h3>
+          <h3 class="portfolio-item-title">Taxi service</h3>
           <p class="portfolio-item-category">Marketing</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-illustrations.jpg" width="360" height="300" alt="Screen illustrations">
-          <h3 class="portfolio-item-title">Screen Illustrations</h3>
+          <h3 class="portfolio-item-title">Screen illustrations</h3>
           <p class="portfolio-item-category">Design</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-courses.jpg" width="360" height="300" alt="Online courses">
-          <h3 class="portfolio-item-title">Online Courses</h3>
+          <h3 class="portfolio-item-title">Online courses</h3>
           <p class="portfolio-item-category">Marketing</p>
         </li>
       </ul>
@@ -144,7 +144,7 @@
     <!-- #endregion -->
   </main>
   <footer class="footer">
-    <a class="footer-logo logo" href="./index.html">Web<span class="footer-logo-accent logo-accent">Studio</span></a>
+    <a class="footer-logo logo" href="./index.html">Web<span class="footer-logo-accent logo-accent">studio</span></a>
 
     <p class="footer-description">
       Increase the flow of customers and sales for your business with digital marketing & growth solutions.
