change the case of the logo inside the header and footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="header">
     <nav class="header-navigation">
       <a class="header-navigation-logo logo" href="./index.html">Web<span
-          class="navigation-logo-accent logo-accent">studio</span></a>
+          class="navigation-logo-accent logo-accent">Studio</span></a>
 
       <ul class="header-navigation-list navigation-list">
         <li><a class="navigation-list-item" href="./index.html">Studio</a></li>
@@ -144,7 +144,7 @@
     <!-- #endregion -->
   </main>
   <footer class="footer">
-    <a class="footer-logo logo" href="./index.html">Web<span class="footer-logo-accent logo-accent">studio</span></a>
+    <a class="footer-logo logo" href="./index.html">Web<span class="footer-logo-accent logo-accent">Studio</span></a>
 
     <p class="footer-description">
       Increase the flow of customers and sales for your business with digital marketing & growth solutions.
