--- a/index.html
+++ b/index.html
@@ -111,32 +111,32 @@
       <ul class="our-portfolio-list portfolio-list">
         <li class="portfolio-list-item portfolio-item">
           <img src="./images/portfolio-banking.jpg" width="360" height="300" alt="Banking app">
-          <h3 class="portfolio-item-title">Banking app</h3>
+          <h3 class="portfolio-item-title">Banking App</h3>
           <p class="portfolio-item-category">App</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-payment.jpg" width="360" height="300" alt="Cashless payment">
-          <h3 class="portfolio-item-title">Cashless payment</h3>
+          <h3 class="portfolio-item-title">Cashless Payment</h3>
           <p class="portfolio-item-category">Marketing</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-app.jpg" width="360" height="300" alt="Meditation app">
-          <h3 class="portfolio-item-title">Meditation app</h3>
+          <h3 class="portfolio-item-title">Meditation App</h3>
           <p class="portfolio-item-category">App</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-taxi.jpg" width="360" height="300" alt="Taxi service">
-          <h3 class="portfolio-item-title">Taxi service</h3>
+          <h3 class="portfolio-item-title">Taxi Service</h3>
           <p class="portfolio-item-category">Marketing</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-illustrations.jpg" width="360" height="300" alt="Screen illustrations">
-          <h3 class="portfolio-item-title">Screen illustrations</h3>
+          <h3 class="portfolio-item-title">Screen Illustrations</h3>
           <p class="portfolio-item-category">Design</p>
         </li>
         <li class="portfolio-list-item">
           <img src="./images/portfolio-courses.jpg" width="360" height="300" alt="Online courses">
-          <h3 class="portfolio-item-title">Online courses</h3>
+          <h3 class="portfolio-item-title">Online Courses</h3>
           <p class="portfolio-item-category">Marketing</p>
         </li>
       </ul>
